Layout: Test fix for Parents form max-height display bug on small desktop

--- a/src/index.css
+++ b/src/index.css
@@ -1637,7 +1637,7 @@ Sidebar
 
 .social-links a {
   font-size: 1.5rem;
-  margin: 0 0.5rem;
+  margin: 0 1rem;
   color: var(--clr-primary-5);
   transition: var(--transition);
 }
